create new endpoints and create send gift the chat